# OrbitForge

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  TRY_IT_YOURSELF.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  refresh_fallback_tles.yml
docs/: architecture.md  benchmarks.md  checkpoint.md  math.md  recording_demo.md
engine/: CMakeLists.txt  emscripten.cmake
engine/benchmarks/: bench_filters.cpp  bench_integrator.cpp  bench_monte_carlo.cpp
engine/include/: constants.hpp  scenario.hpp  wasm_api.hpp
engine/include/dynamics/: eom.hpp  perturbations.hpp  rigid_body.hpp
engine/include/faults/: fault_injector.hpp
engine/include/filters/: ekf.hpp  filter_base.hpp  kf.hpp  ukf.hpp
engine/include/integrators/: rk4.hpp  rk45.hpp
engine/include/math/: quaternion.hpp
engine/include/memory/: pool_alloc.hpp  ring_buffer.hpp
engine/include/monte_carlo/: ensemble.hpp  mc_runner.hpp
engine/include/sensors/: gps.hpp  gyro.hpp  imu.hpp  magnetometer.hpp
engine/src/: wasm_api.cpp
engine/src/dynamics/: eom.cpp  perturbations.cpp  rigid_body.cpp
engine/src/filters/: ekf.cpp  kf.cpp  ukf.cpp
engine/src/math/: quaternion.cpp
engine/src/monte_carlo/: mc_runner.cpp
engine/src/sensors/: magnetometer.cpp
engine/tests/: test_ekf.cpp  test_ensemble.cpp  test_eom.cpp  test_fault_injector.cpp  test_filter_consistency.cpp  test_kf.cpp  test_mc_runner.cpp  test_pool_alloc.cpp  test_quaternion.cpp  test_rigid_body.cpp  test_ring_buffer.cpp  test_rk4.cpp  test_rk45.cpp  test_scenario.cpp  test_sensors.cpp  test_ukf.cpp  test_wasm_api.cpp
scripts/: benchmark.sh  build_wasm.sh  gen_icons.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  sw.ts  tsconfig.json  vite.config.ts
web/e2e/: run_lifecycle.spec.ts
web/public/: _headers  manifest.json
web/scripts/: refresh_fallback_tles.mjs
web/src/: main.ts  worker.ts
web/src/bridge/: mc_progress_reader.ts  ring_reader.ts  wasm_types.ts
web/src/data/: fallback_tles.json  tle_feed.ts  tle_parser.ts
web/src/renderer/: attitude.ts  axis.ts  covariance.ts  earth.ts  gl_utils.ts  orbit.ts  panels.ts  satellite_marker.ts  solar_ephemeris.ts  solar_system.ts  starfield.ts
web/src/ui/: fault_panel.ts  info_button.ts  mc_results.ts  run_controls.ts  scenario_editor.ts  toast.ts
